# conversational-rag

./: Makefile  README.md  pyproject.toml
src/conversational_rag/: __init__.py  memory.py  models.py  pipeline.py  reformulator.py  retriever.py
tests/: test_memory.py  test_pipeline.py  test_reformulator.py  test_retriever.py
